src/test/deca/syntax/invalid/improvided/point_virgule_fin_ligne.deca
// Description :
// 	test une ligne qui se termine pas par ';'
// Resultats :
// 	Ligne 6 : missing ; at end of line 
{
	int x

}
